--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,7 +10,6 @@ on:
 jobs:
   build_web:
     name: Run Flutter Build (Web)
-    working-directory: ./web
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -22,5 +21,5 @@ jobs:
       - run: flutter clean
       - run: |
           flutter build web --release
-
+      - working-directory: ./web
 
