--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,10 +16,20 @@ jobs:
       - uses: subosito/flutter-action@v2
         with:
           channel: "stable"
-      - run: flutter --version
-      - run: flutter pub get
-      - run: flutter clean
-      - run: |
+
+      - name: "Flutter version log"
+        run: flutter --version
+        
+      - name: "Dependencies installation"
+        run: flutter pub get
+        working-directory: ./web
+
+      - name: "Cleaning build"
+        run: flutter clean
+        working-directory: ./web
+
+      - name: "Building web app"
+        run: |
           flutter build web --release
-      - working-directory: ./web
+        working-directory: ./web
 
